--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -89,13 +89,13 @@
 
     <!-- Product Cards -->
     <div class="cards">
-        <img src="./camera.avif" class="image-product" alt="Camera" />
-        <h5>Camera</h5>
-        <p>Rp. 1.000.000,00</p>
-        <p>Description ~~~</p>
+        <img src="{{image}}" class="image-product" alt="{{ name }}" />
+        <h5>{{ name }}</h5>
+        <p>{{ price }}</p>
+        <p>{{ description }}</p>
     </div>
    
-    <div class="cards">
+    <!-- <div class="cards">
         <img src="./kaktus.avif" class="image-product" alt="Kaktus" />
         <h5>Kaktus</h5>
         <p>Rp. 50.000,00</p>
@@ -121,6 +121,6 @@
         <h5>Tumbler</h5>
         <p>Rp. 140.000,00</p>
         <p>Description ~~~</p>
-    </div>
+    </div> -->
 </body>
 </html>
