feat: add nama_tokko, nama_pemilik, and kelas_pemilik to the view and render it

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -80,7 +80,8 @@
 
     <!-- Header -->
     <h1 class="header">
-        <strong>Welcome To Palugada 🥰</strong>
+        <strong>Welcome To {{ nama_toko }} 🥰</strong>
+        <p>By : {{ nama_pemilik }} from {{ kelas_pemilik }}</p>
     </h1>
 
     <h3 class="header">Our store provides the best quality and also cheap!</h3>
