--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body class="bg-gray-100 font-sans m-0 p-0">
     <!-- Navbar -->
     <nav class="bg-red-400 w-full h-20 flex items-center justify-between px-10 sticky top-0">
-        <img src="{% static 'path/to/logo.png' %}" class="w-32" alt="Logo"/>
+        <img src="{% static 'logo.png' %}" class="w-16" alt="Logo"/>
         <ul class="flex space-x-20">
             <li>
                 <a href="" class="text-white hover:underline cursor-pointer">Home</a>
