--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,10 @@
         <img src="{% static 'logo.png' %}" class="w-16" alt="Logo"/>
         <ul class="flex space-x-20">
             <li>
-                <a href="" class="text-white hover:underline cursor-pointer">Home</a>
+                <a href="{% url 'main:show_main' %}" class="text-white hover:underline cursor-pointer">Home</a>
             </li>
             <li>
-                <a href="" class="text-white hover:underline px-4 py-2 rounded border border-white cursor-pointer">Sign In</a>
+                <a href="{% url 'main:register' %}" class="text-white hover:underline px-4 py-2 rounded border border-white cursor-pointer">Sign In</a>
             </li>
         </ul>
     </nav>
