feat: make logout feature

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -40,5 +40,8 @@
             </div>
         {% endif %}
     </div>
+    <a href="{% url 'main:logout' %}">
+        <button>Logout</button>
+    </a>
 </div>
 {% endblock content %}
