--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -22,7 +22,7 @@
         </a>
     </div>
     <!-- Product Cards Section -->
-    <div class="container mx-auto py-10">
+    <div class="container mx-auto flex justify-center py-10">
         {% if not product_entries %}
             <p class="text-center text-gray-700">Belum ada produk baru</p>
         {% else %}
