--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="py-10">
@@ -21,10 +22,14 @@
             <button class="bg-red-500 text-white px-4 py-2 rounded">Add New Product</button>
         </a>
     </div>
+
     <!-- Product Cards Section -->
     <div class="container mx-auto flex justify-center py-10">
         {% if not product_entries %}
-            <p class="text-center text-gray-700">Belum ada produk baru</p>
+            <div class="flex flex-col items-center justify-center">
+                <img src="{% static 'image/sedih-banget.png' %}" alt="sad face" class="w-32 h-32 mb-6 object-contain" />
+                <p class="text-center text-gray-700">Belum ada produk baru</p>
+            </div>
         {% else %}
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                 {% for product_entry in product_entries %}
@@ -35,6 +40,20 @@
                         <p class="text-gray-700 text-lg font-medium mb-2">{{ product_entry.price }}</p>
                         <p class="text-gray-600 text-sm leading-relaxed">{{ product_entry.description }}</p>
                     </div>
+                    <div class="flex justify-between px-5 py-3">
+                        <a href="{% url 'main:edit_product' product_entry.pk %}">
+                            <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700 flex items-center">
+                                <i class="fas fa-edit mr-2"></i>
+                                Edit
+                            </button>
+                        </a>
+                        <a href="{% url 'main:delete_product' product_entry.pk %}">
+                            <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-700 flex items-center">
+                                <i class="fas fa-trash-alt mr-2"></i>
+                                Delete
+                            </button>
+                        </a>
+                    </div>
                 </div>
                 {% endfor %}
             </div>
@@ -42,7 +61,7 @@
     </div>
     <h5>Sesi terakhir login: {{ last_login }}</h5>
     <a href="{% url 'main:logout' %}">
-        <button>Logout</button>
+        <button class="border-2 border-red-600 p-2 m-3 rounded-md bg-white hover:border-blue-600">Logout</button>
     </a>
 </div>
 {% endblock content %}
